--- a/src/RssReader/RssReader.csproj
+++ b/src/RssReader/RssReader.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>4812eea9-ee70-4d81-bd6f-d910739fad05</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -60,7 +61,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Navigation" />
     <Folder Include="wwwroot\lib" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.19" />
   </ItemGroup>
 
 </Project>
